prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_call_result_type.nut
// EXPECTED: compile-time error - function returns int, assigned to string variable
function sqri(x: int): int {
    return x * x
}
local y: string = sqri(5)
return y
